add redis cache
